glFusion ChangeLog

v1.3.2
------

v1.3.1
------
- Fixed potential SQL inject in Media Gallery - Identified by Manituna
  Security (Mark)
- Fixed SpamX SFS email check - no longer urlencode email address (Mark)
- Added Clear Cache and Menu Builder entries to the Admins Only block
  function (Eric)
- StaticPages Plugin: Added rightblocks only page option (Eric)
- Improved session id generation (Mark)
- Improved error handling on display error and abort call. (Mark)
- Improved upload security for FileMgmt plugin (Mark)
- Fixed error in Media Gallery submission queue approval (Mark)
- Fixed SQL error when FileMgmt integration is enabled in Forum
  Plugin (Mark)
- Fixed email notification error - invalid email address (Mark)
- Fixed error when saving in Group editor when chk_showall was set
  to 1 (Mark)
- Demo mode security improvements (Mark)

v1.3.0
------
- Added social auth moorotator image to default content (Michael/Eric)
- Moved hard-coded styles in public_html/layout/nouveau/users/loginform.thtml
  to style.css, dynamically set loginbox width if oauth enabled (Michael/Eric)
- Moved hard coded rating speed limit to configuration (Mark)
- Fixed album re-initialize bug in Media Gallery (Mark)
- Fixed bug where large files were copied twice when using
  Media Gallery FTP upload (Mark)
- Display 404 Error if invalid SID passed to article.php (Mark)
- Added link to Upgrade Checker on upgrade success page. (Mark)
- Several language file fixes and HTML code fixes (Andre)
- Copyright year fix - if year is old than current show
  $copyright_year - current_year (Andre)
- Updated config.html documentation to point to correct Wiki URLs and to
  support new configuration items.
- Added configuration 're-sync' to reset configuration items to the current
  fieldset / sort orders - keeps everything in sync as sites upgrade (Mark)
- Removed Digibug support form Media Gallery
- Updated OAuth 1.0a and 2.0 support for Facebook, Google, Twitter, LinkedIn,