@@ -4,7 +4,7 @@ What is glFusion CMS?
 =====================
 glFusion CMS is a content management and publishing system. It can be
 utilized as a content management system, a content publishing system,
-a colloboration system, and even an application development framework.
+a collaboration system, and even an application development framework.
 Regardless how you use it, glFusion CMS provides all the tools necessary
 to quickly create and maintain a content driven web site. glFusion CMS
 also provides a rich application development environment.
@@ -88,6 +88,6 @@ Version 2.
 
 Further Documentation
 =====================
-glFusion has extensive online documentation available at:
+glFusion has extensive on-line documentation available at:
 
 http://www.glfusion.org/wiki/glfusion:start
